--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ a:hover.login {
 #body-ctnr h1 {
 	padding: 0 0 3px 0;
 	margin-bottom: 10px;
-	border-bottom: 2px solid #365DBA;
 }
 
 
@@ -828,7 +827,7 @@ h1 {
 	font-family: 'Open Sans Condensed', Times, Arial, Verdana, sans-serif;
 	font-size: 29px;
 	font-weight: 100;
-	color: #365DBA0;
+	color: #323232;
 	margin: 5px 0;
 	padding: 0;
 }
@@ -837,7 +836,7 @@ h2 {
 	font-family: 'Open Sans Condensed', Times, Arial, Verdana, sans-serif;
 	font-size: 25px;
 	font-weight: normal;
-	color: #000000;
+	color: #323232;
 	margin: 5px 0;
 	padding: 5px;
 }
@@ -846,7 +845,7 @@ h3 {
     font-family: 'Open Sans Condensed', Times, Arial, Helvetica, sans-serif;
 	font-size: 22px;
 	font-weight: normal;
-	color: #444444;
+	color: #323232;
 	margin: 5px 0;
 	padding: 0;
 }
@@ -855,7 +854,7 @@ h4 {
 	font-family: 'Open Sans Condensed', Arial, Verdana, sans-serif;
 	font-size: 17px;
 	font-weight: bold;
-	color: #000000;
+	color: #323232;
 }
 
 .brd {
@@ -1187,8 +1186,8 @@ table {
 }
 
 .featured_title {
-	color: #C1DCF1;
-	border-bottom: 1px solid #C1DCF1;
+	color: #323232;
+	border-bottom: 1px solid #323232;
 	margin: 5px;
 }
 
